<resources>
    <string name="app_name">Calculator</string>

    <string name="invalid">Invalid expression</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="left">(</string>
    <string name="right">)</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="delete">del</string>
    <string name="clear">C</string>
    <string name="e">e</string>
    <string name="ln">ln</string>
    <string name="lg">lg</string>
    <string name="pow">^</string>
    <string name="sqrt">sqrt</string>
    <string name="mod">%</string>
    <string name="fact">!</string>
    <string name="pi">pi</string>
    <string name="div">/</string>
    <string name="mul">*</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="dot">.</string>
    <string name="eq">=</string>
    <string name="sci">SCI</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
