<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="4"
    android:rowCount="5">

    <Button
        style="@style/ButtonStyle"
        android:onClick="onNumberClick"
        android:text="@string/_7"/>
    <Button
        style="@style/ButtonStyle"
        android:onClick="onNumberClick"
        android:text="@string/_8"/>
    <Button
        style="@style/ButtonStyle"
        android:onClick="onNumberClick"
        android:text="@string/_9"/>

    <Button
        style="@style/ButtonStyle"
        android:id="@+id/delete"
        android:background="#FD0000"
        android:onClick="onOpClick"
        android:text="@string/delete" />

    <Button
        style="@style/ButtonStyle"
        android:onClick="onNumberClick"
        android:text="@string/_4"/>
    <Button
        style="@style/ButtonStyle"
        android:onClick="onNumberClick"
        android:text="@string/_5"/>
    <Button
        style="@style/ButtonStyle"
        android:onClick="onNumberClick"
        android:text="@string/_6"/>

    <Button
        style="@style/ButtonStyle"
        android:background="#fffae8"
        android:onClick="onOpClick"
        android:text="@string/div" />

    <Button
        style="@style/ButtonStyle"
        android:onClick="onNumberClick"
        android:text="@string/_1"/>
    <Button
        style="@style/ButtonStyle"
        android:onClick="onNumberClick"
        android:text="@string/_2"/>
    <Button
        style="@style/ButtonStyle"
        android:onClick="onNumberClick"
        android:text="@string/_3"/>

    <Button
        style="@style/ButtonStyle"
        android:background="#fffae8"
        android:onClick="onOpClick"
        android:text="@string/mul" />

    <Button
        style="@style/ButtonStyle"
        android:onClick="onOpClick"
        android:text="@string/dot"/>
    <Button
        style="@style/ButtonStyle"
        android:onClick="onNumberClick"
        android:text="@string/_0"/>

    <Button
        style="@style/ButtonStyle"
        android:background="#fffae8"
        android:onClick="onOpClick"
        android:text="@string/add" />

    <Button
        style="@style/ButtonStyle"
        android:background="#fffae8"
        android:onClick="onOpClick"
        android:text="@string/sub" />

    <Button
        android:id="@+id/equals"
        style="@style/ButtonStyle"
        android:layout_column="3"
        android:background="#8BC34A"
        android:onClick="onOpClick"
        android:text="@string/eq" />

    <Button
        android:id="@+id/scl"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:layout_gravity="fill"
        android:background="#FFC107"
        android:onClick="onSciClick"
        android:text="@string/sci"
        android:textColor="@color/colorPrimaryDark" />



</GridLayout>